data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
struct DListHead {
    struct DListHead *next;
    struct DListHead *prev;
};
struct OsalMutex {
    void *realMutex;
};
int DevMgrPmRegister(void);
struct OsalSem {
    void *realSemaphore;
};
struct OsalThread {
    void *realThread;
};
struct HdfTaskType;
typedef int32_t (*HdfTaskFunc)(struct HdfTaskType *para);
struct HdfTaskType {
    struct DListHead node;
    HdfTaskFunc func;
};
struct HdfTaskQueue {
    struct OsalSem sem;
    struct OsalMutex mutex;
    struct DListHead head;
    struct OsalThread thread;
    _Bool threadRunFlag;
    HdfTaskFunc queueFunc;
    const char *queueName;
};
void HdfTaskEnqueue(struct HdfTaskQueue *queue, struct HdfTaskType *task);
struct HdfTaskQueue *HdfTaskQueueCreate(HdfTaskFunc func, const char *name);
void HdfTaskQueueDestroy(struct HdfTaskQueue *queue);
typedef unsigned int UINT32;
typedef UINT32 size_t;
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void *OsalMemCalloc(size_t size);
void OsalMemFree(void *mem);