data/rq1/k5/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/.c2r_bindgen_extern/hdf_power_manager_f5fd640e.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DListHead {
    pub next: *mut DListHead,
    pub prev: *mut DListHead,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalSem {
    pub realSemaphore: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalMutex {
    pub realMutex: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalThread {
    pub realThread: *mut ::core::ffi::c_void,
}
pub type HdfTaskFunc = ::core::option::Option<unsafe extern "C" fn(para: *mut HdfTaskType) -> i32>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfTaskType {
    pub node: DListHead,
    pub func: HdfTaskFunc,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfTaskQueue {
    pub sem: OsalSem,
    pub mutex: OsalMutex,
    pub head: DListHead,
    pub thread: OsalThread,
    pub threadRunFlag: bool,
    pub queueFunc: HdfTaskFunc,
    pub queueName: *const ::core::ffi::c_char,
}
unsafe extern "C" {
    pub fn HdfTaskEnqueue(queue: *mut HdfTaskQueue, task: *mut HdfTaskType);
}
unsafe extern "C" {
    pub fn HdfTaskQueueCreate(
        func: HdfTaskFunc,
        name: *const ::core::ffi::c_char,
    ) -> *mut HdfTaskQueue;
}
unsafe extern "C" {
    pub fn HdfTaskQueueDestroy(queue: *mut HdfTaskQueue);
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn DevMgrPmRegister() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
